[package]
name = "oracle-proxy-feed"
version = "0.2.0"
authors = ["Terraform Labs, PTE."]
edition = "2021"
description = "Oracle Proxy feed"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cw2 = { version = "1.0.1" }
tefi-oracle = { path = "../../packages/tefi-oracle", version = "0.2.0", features = ["internal"]}
cosmwasm-std = { version = "1.1.9" }
cw-storage-plus = { version = "1.0.1" }
thiserror = { version = "1.0.26" }
cosmwasm-schema = { version = "1.1.9" }
